Add monthly review

--- a/monthly-reviews/2025-Apr.md
+++ b/monthly-reviews/2025-Apr.md
@@ -3,9 +3,9 @@
 ## Monthly Goals Review
 - Completed TOP HTML form lessons
 - Completed TOP CSS Grid fundamentals
-- Learned form structure, validation, and accessibility best practices
-- Learned Grid layout system including explicit/implicit grids and alignment
-- Learned JavaScript object constructors, and prototypes, and inheritance
+- Learned form structure, validation, accessibility best practices
+- Learned Grid layout system, alignment, explicit/implicit grids
+- Learned JavaScript object constructors, prototypes, inheritance
 
 ## Project Achievements
 - JavaScript Library Project
@@ -16,11 +16,11 @@
 - Portfolio website
   - Status: In progress
   - Features: Responsive image grid layout, interactive button animations with hover effects, image container with optimized image loading
-  - Technical & UX: Grid layout using `repeat(4, 1fr)` and gap variables
+  - Technical: Grid layout using `repeat(4, 1fr)` and gap variables
 
 ## Next Month Planning
 - Focus areas
   - Advanced JavaScript
 - Project targets
-  - Portfolio website
   - TOP JavaScript projects
+  - Portfolio website
