Update weekly review

--- a/weekly-reviews/May/2025-May-W1.md
+++ b/weekly-reviews/May/2025-May-W1.md
@@ -9,7 +9,7 @@
 ### Factory Functions
 - Create and return new objects when called
 - Alternative to constructor functions for object creation
-- Allow for private variables through closures for data privacy
+- Allow for private variables through closures
 - Don't require `new` keyword for instantiation
 
 #### The Module Pattern & IIFEs
@@ -28,14 +28,14 @@
 
 #### Binding and Assignment Destructuring
 - Binding patterns use declaration keywords (`var`, `let`, `const`)
-- Assignment patterns don't use keywords and assign to existing variables
+- Assignment patterns use pre-existing variables
 - Can further destructure nested properties
-- Assignment target can be a variable or property of another object
+- Assignment target can be a variable or another object's property
 
 #### Default Values
-- Provide fallback values when destructured property is undefined
-- Syntax: `const { prop = defaultValue } = obj;`
-- Not triggered by `null` values, only by undefined or missing properties
+- Provide fallback values when destructured property is `undefined` or missing
+- Syntax: `const { propertyName = defaultValue } = obj;`
+- Don't apply to `null` values
 
 ## Next Week's Focus
 - JavaScript tic tac toe project
