Update weekly review

--- a/weekly-reviews/May/2025-May-W1.md
+++ b/weekly-reviews/May/2025-May-W1.md
@@ -24,7 +24,7 @@
 - Object destructuring: `const { a, b, c } = obj;`
 - Array destructuring: `const [a, b] = arr;`
 - Can use rest parameter `...rest` to collect remaining properties
-- Rest parameter must be the last item in the pattern with no trailing comma
+- Rest parameter must be the last item with no trailing comma
 
 #### Binding and Assignment Destructuring
 - Binding patterns use declaration keywords (`var`, `let`, `const`)
