Add ES6 modules and npm sections

--- a/weekly-reviews/May/2025-May-W2.md
+++ b/weekly-reviews/May/2025-May-W2.md
@@ -41,12 +41,63 @@ class MyClass {
 #### Inheritance
 - Uses `extends` keyword to create subclasses
 - Child classes inherit properties and methods from parent
-- Constructor in subclass must call `super()` before using this
-- `super` keyword provides access to parent class methods and constructor
+- Constructor in subclass must call `super()` before using `this`
+
+### ES6 Modules
+#### Import and Export Basics
+- Two primary types: default exports/imports and named exports/imports
+- ES6 modules use static imports (resolved at compile time, not runtime)
+- File paths require strings, not template literals
+
+#### Named Exports
+- Can be declared inline: `export const varName = value;`
+- Can be exported after declaration: `export { varName, funcName };`
+- Must be imported with exact same names: `import { varName } from "./script.js";`
+- Can be renamed during import: `import { varName as newName } from "./script.js";`
+
+#### Default Exports
+- Only one default export allowed per module
+- Can be imported with any name
+- Syntax: `export default expression;` or `export default function funcName() {}`
+- Import syntax: `import anyName from "./script.js";` (no curly braces)
+
+#### Re-exporting/Aggregating
+- Modules can relay exports from other modules
+- Useful for creating "index" files that consolidate exports
+- Syntax: `export { default as func1, func2 } from "./script.js";`
+- Can combine default and named exports: `export { default, namedExport } from "./script.js";`
+
+#### Module Organization
+- Entry point: Main file that imports from other modules
+- HTML only needs to include the entry point script with `type="module"`
+- Modules automatically use strict mode
+- Modules have their own scope (variables aren't added to global scope)
+
+### npm
+#### Basics
+- Repository of JavaScript packages and command-line tool
+- Used to install, manage, and update project dependencies
+- Commands include: `npm init`, `npm install`, `npm uninstall`
+
+#### package.json
+- Central configuration file for npm projects
+- Lists project dependencies and their versions
+- Contains project metadata and npm scripts
+- Updated automatically when installing/uninstalling packages
+
+#### Required Fields
+- `name`: Package identifier (lowercase, no spaces)
+- `version`: Following semantic versioning (MAJOR.MINOR.PATCH)
+
+#### Optional Fields
+- `author`: Format is "Your Name email@example.com (https://example.com)"
+- `description`: Short explanation of project purpose
+- `scripts`: Custom commands that can be run with `npm run script-name`
+- `dependencies`: Packages required for production
+- `devDependencies`: Packages only needed during development
 
 ## Next Week's Focus
 - JavaScript Webpack
-- JavaScript JSON
 - JavaScript OOP principles
 
 ## Resources Used
