Update weekly review

--- a/weekly-reviews/May/2025-May-W3.md
+++ b/weekly-reviews/May/2025-May-W3.md
@@ -7,7 +7,7 @@
 - TOP JavaScript to-do list project – In progress
 
 ## Key Learnings
-### Webpack Fundamentals
+### Webpack
 - Static module bundler that creates dependency graphs from entry points
 - Combines multiple files into single output
 - `src` directory: source code workspace
@@ -30,7 +30,7 @@
 #### Syntax Rules
 - Strings must use double quotes only
 - No trailing commas in objects/arrays
-- No comments allowed
+- No comments
 - Properties must be `"key": value` format
 - Only serializable data types permitted
 
