Update weekly review

--- a/weekly-reviews/May/2025-May-W4.md
+++ b/weekly-reviews/May/2025-May-W4.md
@@ -7,6 +7,45 @@
 - TOP asynchronous code – In progress
 
 ## Key Learnings
+### Dynamic UI Components
+#### Drop-down Menus
+- Two main components:
+  - Toggle button that controls visibility
+  - Dropdown content container
+- Typically implemented with JavaScript event listeners and CSS display/visibility properties
+
+#### Image Carousel
+- Structure consists of:
+  - Outer container div acting as viewport
+  - Inner container div with images arranged horizontally
+  - Navigation controls (previous/next buttons, indicators)
+- Uses CSS transforms or positioning to slide between images
+
+### Form Validation
+#### Constraint Validation API
+- Built-in browser validation system
+- Available on form element DOM interfaces:
+  - HTMLButtonElement (`<button>`)
+  - HTMLFieldSetElement (`<fieldset>`)
+  - HTMLInputElement (`<input>`)
+  - HTMLOutputElement (`<output>`)
+  - HTMLSelectElement (`<select>`)
+  - HTMLTextAreaElement (`<textarea>`)
+
+#### Key Properties
+- `validationMessage`: Returns localized error message or empty string if valid
+- `validity`: Returns ValidityState object with validation status
+- `willValidate`: Boolean indicating if element participates in validation
+
+#### Key Methods
+- `checkValidity()`: Returns true/false for validity; fires `invalid` event if invalid
+- `reportValidity()`: Triggers validation display and focuses first invalid field
+- `setCustomValidity(message)`: Sets custom error message; empty string clears error
+
+#### Custom Error Messages
+- Use `setCustomValidity()` to override default browser messages
+- Target specific validation types using `validity` properties (e.g., `validity.typeMismatch`)
+- Integrates with browser's native validation UI display
 
 ## Next Week's Focus
 - JavaScript to-do list project
@@ -16,4 +55,4 @@
 ## Resources Used
 - TOP course
 - MDN Web Docs
-- Webpack documentation
+- W3Schools
