--- a/weekly-reviews/May/2025-May-W4.md
+++ b/weekly-reviews/May/2025-May-W4.md
@@ -4,18 +4,18 @@
 - TOP JavaScript dynamic interactions – Completed
 - TOP JavaScript form validation – Completed
 - TOP JavaScript to-do list project – In progress
-- TOP asynchronous code – In progress
+- TOP JavaScript asynchronous code – In progress
 
 ## Key Learnings
 ### Dynamic UI Components
 #### Drop-down Menus
-- Two main components:
+- Main components:
   - Toggle button that controls visibility
   - Dropdown content container
-- Typically implemented with JavaScript event listeners and CSS display/visibility properties
+- Implemented with JavaScript event listeners and CSS display/visibility properties
 
 #### Image Carousel
-- Structure consists of:
+- Main components:
   - Outer container div acting as viewport
   - Inner container div with images arranged horizontally
   - Navigation controls (previous/next buttons, indicators)
