--- a/monthly-reviews/2025-Apr.md
+++ b/monthly-reviews/2025-Apr.md
@@ -8,7 +8,7 @@
 - Learned JavaScript object constructors, prototypes, inheritance
 
 ## Project Achievements
-- JavaScript Library Project
+- JavaScript library project
   - Status: Completed
   - Features: Dynamic UI with add/remove functionality and read status toggling, form validation with error messaging, modal dialog interactions
   - Technical & UX: Object constructors, DOM manipulation, function closures for editing UI elements, accessibility enhancements
