Update monthly review

--- a/monthly-reviews/2025-May.md
+++ b/monthly-reviews/2025-May.md
@@ -1,8 +1,8 @@
 # 2025 May
 
 ## Monthly Goals Review
-- Learned JavaScript factory functions, classes, and ES6 modules
-- Learned JavaScript npm, Webpack, and linting
+- Learned JavaScript factory functions, classes, ES6 modules
+- Learned JavaScript npm, Webpack, linting
 - Implemented dynamic UI components and form validation
 
 ## Project Achievements
@@ -11,7 +11,7 @@
   - Features: Interactive game board with win/lose logic
   - Technical: Factory functions, module patterns, game state management, game flow control
 
-- JavaScript to-do list Project
+- JavaScript to-do list project
   - Status: In progress
   - Features: Task management with edit, search, filter functionality
   - Technical & UX: Webpack configuration, global search, form validation and custom messages, interactive dropdown menus
