Update weekly review

--- a/weekly-reviews/Jun/2025-June-W1.md
+++ b/weekly-reviews/Jun/2025-June-W1.md
@@ -9,7 +9,9 @@
 ## Key Learnings
 ### Promises & Asynchronous Programming
 - Promises: Objects linking producing code (time-consuming operations) with consuming code (result handlers)
-- Executor function: Runs when creating new Promise, calls `resolve()` for success or `reject()` for errors
+- Executor function:
+  - Runs when creating new Promise
+  - Calls `resolve()` for success or `reject()` for errors
 - Promise chaining: Each `.then()` receives previous handler's return value and passes processed result to next handler
 - Error handling: `.catch()` handles rejections, equivalent to `.then(null, errorHandler)`
 - Cleanup operations: `.finally()` runs regardless of outcome
@@ -17,14 +19,22 @@
 - Race conditions: `Promise.race()` resolves/rejects as soon as first promise settles
 
 ### Async/Await
-- `async` functions: Automatically return promises, declaring asynchronous behavior
-- `await` keyword: Pauses function execution until promise resolves, replaces `.then()` chains
+- `async` functions:
+  - Automatically return promises
+  - Declare asynchronous behavior
+- `await` keyword:
+  - Pauses function execution until promise resolves
+  - Replaces `.then()` chains
 - Error handling: `try/catch` blocks handle async operation failures
 - Multiple promises: Combine `Promise.all()` with `await` for concurrent operations
 
 ### APIs
-- APIs: Servers designed for external data consumption, often require API keys for tracking and abuse prevention
-- Fetch API: JavaScript interface for HTTP requests, returns `Promise` with `Response` object
+- APIs:
+  - Servers designed for external data consumption
+  - Often require API keys for tracking and abuse prevention
+- Fetch API:
+  - JavaScript interface for HTTP requests
+  - Returns `Promise` with `Response` object
 - Basic usage: `fetch()` accepts URL string or `Request` object plus optional configuration
 - Cross-origin safety: Safe requests use `GET/POST/HEAD` methods with limited custom headers
 - CORS requests: Cross-origin requests must meet safety conditions for methods and headers
